--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(endpoint,items)
 S3method(endpoint,search)
 S3method(endpoint,stac)
 S3method(get_spatial,GEOMETRYCOLLECTION)
+S3method(get_spatial,character)
 S3method(get_spatial,list)
 S3method(get_spatial,sf)
 S3method(get_spatial,sfc)
