Introduces assets_url() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ S3method(assets_filter,STACItem)
 S3method(assets_filter,STACItemCollection)
 S3method(assets_select,STACItem)
 S3method(assets_select,STACItemCollection)
+S3method(assets_url,STACItem)
+S3method(assets_url,STACItemCollection)
 S3method(before_request,RSTACQuery)
 S3method(before_request,collection_id)
 S3method(before_request,collections)
@@ -148,6 +150,7 @@ export(assets_append_gdalvsi)
 export(assets_download)
 export(assets_filter)
 export(assets_select)
+export(assets_url)
 export(collections)
 export(ext_filter)
 export(ext_query)
