Introduces to_text() and to_json() for cql2 class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ S3method(text_not_op,cql2_isnull_op)
 S3method(text_not_op,cql2_like_op)
 S3method(text_not_op,default)
 S3method(to_json,character)
+S3method(to_json,cql2)
 S3method(to_json,cql2_between_op)
 S3method(to_json,cql2_comp_op)
 S3method(to_json,cql2_date)
@@ -117,6 +118,7 @@ S3method(to_json,sf)
 S3method(to_json,sfc)
 S3method(to_json,sfg)
 S3method(to_text,character)
+S3method(to_text,cql2)
 S3method(to_text,cql2_accenti_op)
 S3method(to_text,cql2_array_op)
 S3method(to_text,cql2_between_op)
