introduces cql2_text and cql2_json functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,17 +148,17 @@ S3method(to_text,sf)
 S3method(to_text,sfc)
 S3method(to_text,sfg)
 export("%>%")
-export(assets_append_gdalvsi)
 export(assets_download)
 export(assets_filter)
 export(assets_select)
 export(assets_url)
 export(collections)
+export(cql2_json)
+export(cql2_text)
 export(ext_filter)
 export(ext_query)
 export(get_request)
 export(items)
-export(items_apply)
 export(items_assets)
 export(items_bbox)
 export(items_datetime)
