--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,9 @@ Imports:
     magrittr
 Suggests:
     testthat,
-    sf
+    sf,
+    knitr,
+    rmarkdown
 Collate:
     'cql2-expr-funs.R'
     'cql2-types.R'
@@ -61,3 +63,4 @@ Collate:
     'url-utils.R'
     'utils.R'
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
