update app veyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ build_script:
   - travis-tool.sh install_deps
 
 test_script:
-  - travis-tool.sh run_tests
+  - travis-tool.sh rstac_run_tests
 
 on_failure:
   - 7z a failure.zip *.Rcheck\*
