Add queryables and conformance files in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Collate:
     'cql2-env.R'
     'assets-funs.R'
     'check-utils.R'
+    'conformance-query.R'
     'collections-query.R'
     'deprec-funs.R'
     'document-funs.R'
@@ -54,6 +55,7 @@ Collate:
     'message-utils.R'
     'print.R'
     'query-funs.R'
+    'queryables-query.R'
     'request.R'
     'rstac.R'
     'signatures.R'
