--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 S3method(after_response,RSTACQuery)
 S3method(after_response,collection_id)
 S3method(after_response,collections)
+S3method(after_response,conformance)
 S3method(after_response,ext_filter)
 S3method(after_response,ext_query)
 S3method(after_response,item_id)
 S3method(after_response,items)
+S3method(after_response,queryables)
 S3method(after_response,search)
 S3method(after_response,stac)
 S3method(as.character,cql2_filter)
@@ -21,10 +23,12 @@ S3method(assets_url,STACItemCollection)
 S3method(before_request,RSTACQuery)
 S3method(before_request,collection_id)
 S3method(before_request,collections)
+S3method(before_request,conformance)
 S3method(before_request,ext_filter)
 S3method(before_request,ext_query)
 S3method(before_request,item_id)
 S3method(before_request,items)
+S3method(before_request,queryables)
 S3method(before_request,search)
 S3method(before_request,stac)
 S3method(check_subclass,RSTACDocument)
@@ -32,10 +36,12 @@ S3method(check_subclass,RSTACQuery)
 S3method(endpoint,RSTACQuery)
 S3method(endpoint,collection_id)
 S3method(endpoint,collections)
+S3method(endpoint,conformance)
 S3method(endpoint,ext_filter)
 S3method(endpoint,ext_query)
 S3method(endpoint,item_id)
 S3method(endpoint,items)
+S3method(endpoint,queryables)
 S3method(endpoint,search)
 S3method(endpoint,stac)
 S3method(get_spatial,GEOMETRYCOLLECTION)
@@ -68,6 +74,8 @@ S3method(parse_params,ext_filter)
 S3method(parse_params,ext_query)
 S3method(parse_params,items)
 S3method(parse_params,search)
+S3method(print,Conformance)
+S3method(print,Queryables)
 S3method(print,RSTACQuery)
 S3method(print,STACCatalog)
 S3method(print,STACCollection)
@@ -149,6 +157,7 @@ export(assets_filter)
 export(assets_select)
 export(assets_url)
 export(collections)
+export(conformance)
 export(cql2_json)
 export(cql2_text)
 export(ext_filter)
@@ -168,6 +177,7 @@ export(items_next)
 export(items_reap)
 export(items_sign)
 export(post_request)
+export(queryables)
 export(sign_bdc)
 export(sign_planetary_computer)
 export(stac)
