--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ S3method(assets_download,STACItem)
 S3method(assets_download,STACItemCollection)
 S3method(assets_filter,STACItem)
 S3method(assets_filter,STACItemCollection)
+S3method(assets_rename,STACItem)
+S3method(assets_rename,STACItemCollection)
 S3method(assets_select,STACItem)
 S3method(assets_select,STACItemCollection)
 S3method(assets_url,STACItem)
@@ -154,6 +156,7 @@ S3method(to_text,sfg)
 export("%>%")
 export(assets_download)
 export(assets_filter)
+export(assets_rename)
 export(assets_select)
 export(assets_url)
 export(collections)
