--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,10 +18,13 @@ S3method(assets_filter,STACItem)
 S3method(assets_filter,STACItemCollection)
 S3method(assets_rename,STACItem)
 S3method(assets_rename,STACItemCollection)
+S3method(assets_rename,default)
 S3method(assets_select,STACItem)
 S3method(assets_select,STACItemCollection)
+S3method(assets_select,default)
 S3method(assets_url,STACItem)
 S3method(assets_url,STACItemCollection)
+S3method(assets_url,default)
 S3method(before_request,RSTACQuery)
 S3method(before_request,collection_id)
 S3method(before_request,collections)
@@ -52,26 +55,37 @@ S3method(get_spatial,list)
 S3method(get_spatial,sf)
 S3method(get_spatial,sfc)
 S3method(get_spatial,sfg)
+S3method(has_assets,STACItem)
+S3method(has_assets,STACItemCollection)
+S3method(has_assets,default)
 S3method(items_assets,STACItem)
 S3method(items_assets,STACItemCollection)
+S3method(items_assets,default)
 S3method(items_bbox,STACItem)
 S3method(items_bbox,STACItemCollection)
+S3method(items_bbox,default)
+S3method(items_compact,STACItemCollection)
 S3method(items_datetime,STACItem)
 S3method(items_datetime,STACItemCollection)
-S3method(items_fetch,STACItem)
+S3method(items_datetime,default)
 S3method(items_fetch,STACItemCollection)
 S3method(items_fields,STACItem)
 S3method(items_fields,STACItemCollection)
+S3method(items_fields,default)
+S3method(items_filter,STACItemCollection)
 S3method(items_length,STACItem)
 S3method(items_length,STACItemCollection)
+S3method(items_length,default)
 S3method(items_matched,STACItem)
 S3method(items_matched,STACItemCollection)
-S3method(items_next,STACItem)
+S3method(items_matched,default)
 S3method(items_next,STACItemCollection)
 S3method(items_reap,STACItem)
 S3method(items_reap,STACItemCollection)
+S3method(items_reap,default)
 S3method(items_sign,STACItem)
 S3method(items_sign,STACItemCollection)
+S3method(items_sign,default)
 S3method(parse_params,ext_filter)
 S3method(parse_params,ext_query)
 S3method(parse_params,items)
@@ -166,9 +180,11 @@ export(cql2_text)
 export(ext_filter)
 export(ext_query)
 export(get_request)
+export(has_assets)
 export(items)
 export(items_assets)
 export(items_bbox)
+export(items_compact)
 export(items_datetime)
 export(items_fetch)
 export(items_fields)
