--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(after_response,stac)
 S3method(as.character,cql2_filter)
 S3method(assets_download,STACItem)
 S3method(assets_download,STACItemCollection)
+S3method(assets_download,default)
 S3method(assets_filter,STACItem)
 S3method(assets_filter,STACItemCollection)
 S3method(assets_rename,STACItem)
@@ -109,6 +110,7 @@ S3method(text_not_op,cql2_in_op)
 S3method(text_not_op,cql2_isnull_op)
 S3method(text_not_op,cql2_like_op)
 S3method(text_not_op,default)
+S3method(to_json,"NULL")
 S3method(to_json,character)
 S3method(to_json,cql2)
 S3method(to_json,cql2_between_op)
