--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,8 +177,12 @@ export(assets_select)
 export(assets_url)
 export(collections)
 export(conformance)
+export(cql2_bbox)
+export(cql2_date)
+export(cql2_interval)
 export(cql2_json)
 export(cql2_text)
+export(cql2_timestamp)
 export(ext_filter)
 export(ext_query)
 export(get_request)
