Update API NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,7 +177,7 @@ export(assets_select)
 export(assets_url)
 export(collections)
 export(conformance)
-export(cql2_bbox)
+export(cql2_bbox_as_geojson)
 export(cql2_date)
 export(cql2_interval)
 export(cql2_json)
