Update exported functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,8 @@ S3method(get_spatial,sfg)
 S3method(has_assets,STACItem)
 S3method(has_assets,STACItemCollection)
 S3method(has_assets,default)
+S3method(items_as_sf,STACItem)
+S3method(items_as_sf,STACItemCollection)
 S3method(items_assets,STACItem)
 S3method(items_assets,STACItemCollection)
 S3method(items_assets,default)
@@ -188,6 +190,7 @@ export(ext_query)
 export(get_request)
 export(has_assets)
 export(items)
+export(items_as_sf)
 export(items_assets)
 export(items_bbox)
 export(items_compact)
