Update exported functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -172,6 +172,9 @@ S3method(to_text,sf)
 S3method(to_text,sfc)
 S3method(to_text,sfg)
 export("%>%")
+export(asset_eo_bands)
+export(asset_key)
+export(asset_raster_bands)
 export(assets_download)
 export(assets_filter)
 export(assets_rename)
@@ -205,6 +208,7 @@ export(items_next)
 export(items_reap)
 export(items_sign)
 export(post_request)
+export(preview_plot)
 export(queryables)
 export(sign_bdc)
 export(sign_planetary_computer)
