--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,8 @@ Collate:
     'cql2-types.R'
     'parse-utils.R'
     'cql2-core.R'
-    'cql2-prints.R'
+    'cql2-json.R'
+    'cql2-text.R'
     'cql2-adv_comp.R'
     'cql2.R'
     'cql2-env.R'
