--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Description: Provides functions to access, search and download spacetime earth
     (<https://github.com/radiantearth/stac-spec>). 
     For further details see Simoes et al. (2021) <doi:10.1109/IGARSS47720.2021.9553518>.
 License: MIT + file LICENSE
-URL: https://brazil-data-cube.github.io/rstac
+URL: https://brazil-data-cube.github.io/rstac/
 BugReports: https://github.com/brazil-data-cube/rstac/issues
 Encoding: UTF-8
 RoxygenNote: 7.2.3
