--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,10 @@
 url: ~
 template:
   bootstrap: 5
-
+  bslib:
+    base_font:
+        google: IBM Plex Serif
+    heading_font:
+        google: IBM Plex Serif
+    code_font:
+        google: IBM Plex Mono
