Refactor code and documentation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,13 +65,14 @@ Collate:
     'conformance-query.R'
     'collections-query.R'
     'deprec-funs.R'
-    'document-funs.R'
+    'doc-funs.R'
     'ext_filter.R'
     'ext_query.R'
     'extensions.R'
     'items-funs.R'
     'items-utils.R'
     'items-query.R'
+    'links-funs.R'
     'message-utils.R'
     'preview-utils.R'
     'print.R'
@@ -80,10 +81,12 @@ Collate:
     'request.R'
     'signatures.R'
     'stac-query.R'
-    'stac_search.R'
-    'stac_version.R'
+    'search-query.R'
+    'stac-funs.R'
+    'static-funs.R'
     'url-utils.R'
     'utils.R'
     'rstac.R'
+    'rstac-funs.R'
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
