Document static functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,9 +191,12 @@ export(items_matched)
 export(items_next)
 export(items_reap)
 export(items_sign)
+export(link_open)
+export(links)
 export(post_request)
 export(preview_plot)
 export(queryables)
+export(read_items)
 export(sign_bdc)
 export(sign_planetary_computer)
 export(stac)
