--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rstac
 Title: Client Library for SpatioTemporal Asset Catalog
-Version: 0.9.2-5
+Version: 1.0.0
 Authors@R:
     c(person("Rolf", "Simoes",
              email = "rolfsimoes@gmail.com",
@@ -72,7 +72,6 @@ Collate:
     'items-funs.R'
     'items-utils.R'
     'items-query.R'
-    'links-funs.R'
     'message-utils.R'
     'preview-utils.R'
     'print.R'
