--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ S3method(has_assets,doc_item)
 S3method(has_assets,doc_items)
 S3method(items_as_sf,doc_item)
 S3method(items_as_sf,doc_items)
+S3method(items_as_sfc,doc_item)
+S3method(items_as_sfc,doc_items)
 S3method(items_assets,default)
 S3method(items_assets,doc_item)
 S3method(items_assets,doc_items)
@@ -56,6 +58,8 @@ S3method(items_fetch,doc_items)
 S3method(items_fields,doc_item)
 S3method(items_fields,doc_items)
 S3method(items_filter,doc_items)
+S3method(items_intersects,doc_item)
+S3method(items_intersects,doc_items)
 S3method(items_length,doc_items)
 S3method(items_matched,doc_items)
 S3method(items_next,doc_items)
@@ -172,6 +176,7 @@ export(get_request)
 export(has_assets)
 export(items)
 export(items_as_sf)
+export(items_as_sfc)
 export(items_assets)
 export(items_bbox)
 export(items_compact)
@@ -179,6 +184,7 @@ export(items_datetime)
 export(items_fetch)
 export(items_fields)
 export(items_filter)
+export(items_intersects)
 export(items_length)
 export(items_matched)
 export(items_next)
