--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,8 @@ S3method(items_intersects,doc_items)
 S3method(items_length,doc_items)
 S3method(items_matched,doc_items)
 S3method(items_next,doc_items)
+S3method(items_properties,doc_item)
+S3method(items_properties,doc_items)
 S3method(items_reap,default)
 S3method(items_reap,doc_item)
 S3method(items_reap,doc_items)
@@ -188,6 +190,7 @@ export(items_intersects)
 export(items_length)
 export(items_matched)
 export(items_next)
+export(items_properties)
 export(items_reap)
 export(items_sign)
 export(link_open)
@@ -213,5 +216,6 @@ importFrom(httr,write_disk)
 importFrom(jsonlite,fromJSON)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(tibble,as_tibble)
 importFrom(utils,URLdecode)
 importFrom(utils,modifyList)
