Improving static STAC functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ S3method(print,doc_link)
 S3method(print,doc_links)
 S3method(print,doc_queryables)
 S3method(print,rstac_query)
+S3method(stac_type,rstac_doc)
 S3method(stac_version,doc_collections)
 S3method(stac_version,doc_items)
 S3method(stac_version,rstac_doc)
@@ -198,12 +199,14 @@ export(links)
 export(post_request)
 export(preview_plot)
 export(queryables)
+export(read_collections)
 export(read_items)
+export(read_stac)
 export(sign_bdc)
 export(sign_planetary_computer)
 export(stac)
-export(stac_read)
 export(stac_search)
+export(stac_type)
 export(stac_version)
 importFrom(crayon,bold)
 importFrom(httr,GET)
