Improve static functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,8 @@ S3method(items_reap,doc_items)
 S3method(items_sign,default)
 S3method(items_sign,doc_item)
 S3method(items_sign,doc_items)
+S3method(link_open,doc_link)
+S3method(links,rstac_doc)
 S3method(parse_params,ext_filter)
 S3method(parse_params,ext_query)
 S3method(parse_params,items)
@@ -86,6 +88,8 @@ S3method(print,doc_link)
 S3method(print,doc_links)
 S3method(print,doc_queryables)
 S3method(print,rstac_query)
+S3method(read_collections,catalog)
+S3method(read_items,doc_collection)
 S3method(stac_type,rstac_doc)
 S3method(stac_version,doc_collections)
 S3method(stac_version,doc_items)
