Add items_as_tibble() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ S3method(items_as_sf,doc_item)
 S3method(items_as_sf,doc_items)
 S3method(items_as_sfc,doc_item)
 S3method(items_as_sfc,doc_items)
+S3method(items_as_tibble,doc_item)
+S3method(items_as_tibble,doc_items)
 S3method(items_assets,default)
 S3method(items_assets,doc_item)
 S3method(items_assets,doc_items)
@@ -184,6 +186,7 @@ export(has_assets)
 export(items)
 export(items_as_sf)
 export(items_as_sfc)
+export(items_as_tibble)
 export(items_assets)
 export(items_bbox)
 export(items_compact)
