Add as.character() S3 for cql2_spatial class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(after_response,queryables)
 S3method(after_response,search)
 S3method(after_response,stac)
 S3method(as.character,cql2_filter)
+S3method(as.character,cql2_spatial)
 S3method(assets_download,default)
 S3method(assets_download,doc_item)
 S3method(assets_download,doc_items)
