Add items_sign_...() functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -202,6 +202,8 @@ export(items_next)
 export(items_properties)
 export(items_reap)
 export(items_sign)
+export(items_sign_bdc)
+export(items_sign_planetary_computer)
 export(link_open)
 export(links)
 export(post_request)
