--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,16 +219,28 @@ export(stac_search)
 export(stac_type)
 export(stac_version)
 importFrom(crayon,bold)
+importFrom(grid,grid.raster)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
+importFrom(httr,build_url)
 importFrom(httr,content)
 importFrom(httr,http_type)
+importFrom(httr,parse_url)
 importFrom(httr,status_code)
 importFrom(httr,write_disk)
+importFrom(jpeg,readJPEG)
 importFrom(jsonlite,fromJSON)
-importFrom(lifecycle,deprecated)
+importFrom(jsonlite,read_json)
 importFrom(magrittr,"%>%")
-importFrom(tibble,as_tibble)
+importFrom(png,readPNG)
+importFrom(sf,st_geometry)
+importFrom(sf,st_geometry_type)
+importFrom(sf,st_intersects)
+importFrom(sf,st_sf)
+importFrom(sf,st_sfc)
+importFrom(sf,st_transform)
 importFrom(utils,URLdecode)
 importFrom(utils,modifyList)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
