Add items_select() (closes #146)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ S3method(items_properties,doc_items)
 S3method(items_reap,default)
 S3method(items_reap,doc_item)
 S3method(items_reap,doc_items)
+S3method(items_select,doc_items)
 S3method(items_sign,default)
 S3method(items_sign,doc_item)
 S3method(items_sign,doc_items)
@@ -201,6 +202,7 @@ export(items_matched)
 export(items_next)
 export(items_properties)
 export(items_reap)
+export(items_select)
 export(items_sign)
 export(items_sign_bdc)
 export(items_sign_planetary_computer)
