--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,10 @@ export(assets_rename)
 export(assets_select)
 export(assets_url)
 export(collections)
+export(collections_fetch)
+export(collections_length)
+export(collections_matched)
+export(collections_next)
 export(conformance)
 export(cql2_bbox_as_geojson)
 export(cql2_date)
