Add print method for OpenAPI spec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ S3method(print,doc_item)
 S3method(print,doc_items)
 S3method(print,doc_link)
 S3method(print,doc_links)
+S3method(print,doc_openapi_specification)
 S3method(print,doc_queryables)
 S3method(print,rstac_query)
 S3method(read_collections,catalog)
